--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <title>{% block title %}  {% endblock %}</title>
-    <link rel="icon" type="image/png" href="{% static "/images/fav2.png" %}">
+    <link rel="icon" type="image/png" href="{% static "/images/logo5.png" %}">
     <link href="{% static "/css/base.css" %}" rel="stylesheet">
     <link href="{% static "/css/style.css" %}" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
@@ -45,8 +45,10 @@
                     <!-- Logo -->
                     <a class="nav-brand" href="/">
             
-                        <img src="{% static "/images/logo3.png" %}" title="NYC CONSTRUCTION SAFETY TRAINING" style="height: 39px;"
-                            alt=""></a>
+                        <img  src="{% static "/images/logo5.png" %}" title="NYC CONSTRUCTION SAFETY TRAINING" style="height: 62px;"
+                            alt="">
+                            CONSTRUCTION SAFETY TRAINING
+                        </a>
 
                     <!-- Navbar Toggler -->
                     <div class="classy-navbar-toggler">
