--- a/courses/templates/index.html
+++ b/courses/templates/index.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block title %}
-Online Courses - NYC CONSTRUCTION SAFETY TRAINING 
+Online - NYC CONSTRUCTION SAFETY TRAINING 
 {% endblock %}
 
 {% block content %}
