--- a/app_chat/templates/video_room_detail_students.html
+++ b/app_chat/templates/video_room_detail_students.html
@@ -12,23 +12,23 @@
     <span id="count">Disconnected. (0)</span>
 
     <div id="controls">
-        <button class="btn btn-success btn-sm" title="Start Video" id="btn-start-video">
+        <button class="btn btn-success btn-lg" title="Start Video" id="btn-start-video">
             <i class="fa fa-video-camera "></i>
         </button>
 
-        <button class="btn btn-info btn-sm" id="btn-full-screen" title="Full Screen">
+        <button class="btn btn-info btn-lg" id="btn-full-screen" title="Full Screen">
             <i class="fa fa-arrows-alt"></i>
         </button>
 
-        <button class="btn btn-info btn-sm" id="btn-default-screen" title="Default Screen">
+        <button class="btn btn-info btn-lg" id="btn-default-screen" title="Default Screen">
             <i class="fa fa-compress"></i>
         </button>
 
-        <button class="btn btn-primary btn-sm" id="btn-mute" title="Mute">
+        <button class="btn btn-primary btn-lg" id="btn-mute" title="Mute">
             <i class="fa fa-microphone"></i>
         </button>
 
-        <button class="btn btn-danger btn-sm" disabled id="btn-stop-video">
+        <button class="btn btn-danger btn-lg" disabled id="btn-stop-video">
             <i class="fa fa-phone"></i>
         </button>
     </div>
