--- a/students/templates/courses/content/video.html
+++ b/students/templates/courses/content/video.html
@@ -5,7 +5,7 @@
     {{ item.url }} {# always with https #}
 {% endvideo %}
 
-{% video item.video as my_video %}
+{% video item as my_video %}
     URL: {{ my_video.url }}
     Thumbnail: {{ my_video.thumbnail }}
     Backend: {{ my_video.backend }}
